--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ google_analytics: UA-135545669-1
 me:
   name: Michael Collins
   jobtitle: Full Stack Engineer
-  email: mike@michaelcollins.dev
+  email: contact@michaelcollins.dev
   location: Seattle, WA
 
 social_links:
